# RSolve

./: ChangeLog.md  README.md  RSolve.cabal  Rcheck.cabal  Rsolve.cabal  package.yaml  stack.yaml
app/: Main.hs
deprecated/src/RSolve/: BrMonad.hs  Infr.hs
deprecated/src/RSolve/Options/: Core.hs
src/: Main.hs
src/RSolve/: BrMonad.hs  HM.hs  Infr.hs  Logic.hs  MapLike.hs  MultiState.hs  PropLogic.hs  Solver.hs
src/RSolve/HM/: Core.hs  Example.hs  Inference.hs
src/RSolve/Options/: Core.hs  Example.hs
src/Rcheck/: .#d.hs  BrMonad.hs  Logic.hs  Main.hs  Solver.hs  d.hs
test/: Spec.hs
