name:                RSolve
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thautwarm/Rsolve#readme
license:             MIT
license-file:        LICENSE
author:              thautwarm
maintainer:          twshere@outlook.com
copyright:           2018 thautwarm
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable RSolve
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
  other-modules:       RSolve.BrMonad
                     , RSolve.Solver
                     , RSolve.Logic